<resources>
    <string name="app_name">Controle de Estoque</string>
    <string name="titulo_form_cadastro">Cadastro</string>
    <string name="titulo_form_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="btn_login">LogIn</string>
    <string name="ir_cadastro">Ainda não tem uma conta? Cadastre-se!</string>
    <string name="ir_login">Já tem uma conta? Faça LogIn!</string>
    <string name="conf_senha">Confirmar senha</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="menu">menu</string>
    <string name="add_produto">Adicionar produto</string>

    <string name="inicio">Início</string>
    <string name="add_screen">Adicionar</string>

    <string name="descricao">Descrição</string>
    <string name="codbarras">Código de Barras</string>
    <string name="categoria">Categoria</string>
    <string name="valor">Valor Unitário</string>
    <string name="quantidade">Quantidade</string>
    <string name="data_vencimento">Data de Vencimento</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="produtos">Produtos Cadastrados</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="estoque">Estoque</string>
    <string name="fiado">Fiado</string>
    <string name="voltar">Voltar</string>
    <string name="fiados_cadastrados">Fiados Cadastrados</string>
    <string name="adicionar_fiado">Adicionar Fiado</string>
    <string name="realizar_venda">Realizar Venda</string>
    <string name="carregando">Carregando...</string>
    <string name="total_da_compra">Total da compra:</string>
    <string name="r">R$</string>
    <string name="pagamento">Pagamento</string>
    <string name="carrinho_de_vendas">Carrinho de vendas</string>
    <string name="escanear_codigo">Escanear código</string>
    <string name="venda">Venda</string>
    <string name="adicionar_ao_carrinho">Adicionar ao carrinho</string>
    <string name="qtd">Qtd</string>
    <string name="logo">logo</string>
    <string name="nome_do_devedor">Nome do Devedor</string>
    <string name="insira_um_limite_para_a_divida">Insira um limite para a dívida</string>
    <string name="insira_a_divida_atual">Insira a dívida atual</string>
    <string name="data_atual">Data Atual</string>
    <string name="gerenciar_estoque_de_produtos">Gerenciar Estoque de Produtos</string>
    <string name="gerenciar_fiados">Gerenciar Fiados</string>
    <string name="ir_para_o_caixa_de_vendas">Ir para o Caixa de Vendas</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="que_tal_come_armos_o_dia_nos_organizando">Que tal começarmos o dia nos organizando?</string>
    <string name="fa_a_uma_venda_f_cil_e_r_pida">Faça uma venda fácil e rápida</string>
    <string name="adicionar_conta_fiado">Adicionar Conta Fiado</string>
    <string name="img_logo">img_logo</string>
</resources>