<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/white_1"
    tools:context=".view.formLogin.FormLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_form_login"
        android:textSize="30.dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20.dp"
        />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_email"
        android:layout_marginStart="20.dp"
        android:layout_marginEnd="20.dp"
        android:layout_marginBottom="10.dp"
        android:padding="15dp"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_senha"
        android:layout_marginStart="20.dp"
        android:layout_marginEnd="20.dp"
        android:layout_marginBottom="10.dp"
        android:padding="15dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:maxLines="1"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginTop="10.dp"
        android:layout_marginStart="20.dp"
        android:layout_marginEnd="20.dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="15.sp"
        />

    <TextView
        android:id="@+id/btn_navigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/ir_cadastro"
        android:layout_marginTop="10.dp"
        android:textAllCaps="false"
        android:textSize="16.sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />


</LinearLayout>