<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".view.drawerNavigation.telas.fiado.FormAddFiadoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150.px"
        android:background="@color/azul_neon"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="100.px"
            android:layout_height="100.px"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/voltar"
            android:scaleX="1.5"
            android:scaleY="1.5"
            />

        <TextView
            android:id="@+id/titulo_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_conta_fiado"
            android:textSize="18.sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16.dp"
            android:paddingBottom="180.px">

            <EditText
                android:id="@+id/nome_devedor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:gravity="top"
                android:hint="@string/nome_do_devedor"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="1"
                android:padding="16.dp"
                android:textSize="16.sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/limite_divida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:hint="@string/insira_um_limite_para_a_divida"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="16.dp"
                android:textSize="16.sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/atual_divida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:hint="@string/insira_a_divida_atual"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="16.dp"
                android:textSize="16.sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/data_atual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:hint="@string/data_atual"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16.dp"
                android:textSize="16.sp"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/add_fiado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.dp"
                android:padding="15.dp"
                android:text="@string/adicionar_fiado"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16.sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>