<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_1"
    tools:context=".view.bottomNavigation.ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titulo_header"
            android:layout_width="wrap_content"
            android:layout_height="150.px"
            android:gravity="bottom"
            android:text="@string/add_produto"
            android:textSize="20.sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="50.px"
            android:layout_marginBottom="50.px"
            android:layout_marginTop="50.px"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16.dp"
            android:paddingBottom="180.px">

            <EditText
                android:id="@+id/descricao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:background="@drawable/background_textedit"
                android:gravity="top"
                android:hint="@string/descricao"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="16.dp"
                android:textSize="16.sp" />

            <EditText
                android:id="@+id/codbarras"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:background="@drawable/background_textedit"
                android:hint="@string/codbarras"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:padding="16.dp"
                android:textSize="16.sp" />

            <EditText
                android:id="@+id/categoria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:background="@drawable/background_textedit"
                android:hint="@string/categoria"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16.dp"
                android:textSize="16.sp" />

            <EditText
                android:id="@+id/valor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:background="@drawable/background_textedit"
                android:hint="@string/valor"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16.dp"
                android:textSize="16.sp" />

            <EditText
                android:id="@+id/quantidade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:background="@drawable/background_textedit"
                android:hint="@string/quantidade"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:padding="16.dp"
                android:textSize="16.sp" />

            <EditText
                android:id="@+id/data_vencimento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10.dp"
                android:background="@drawable/background_textedit"
                android:hint="@string/data_vencimento"
                android:importantForAutofill="no"
                android:inputType="date"
                android:maxLines="1"
                android:padding="16.dp"
                android:textSize="16.sp" />

            <Button
                android:id="@+id/add_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.dp"
                android:background="@drawable/background_btn"
                android:padding="15.dp"
                android:text="@string/add_produto"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16.sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>