<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.drawerNavigation.DrawerActivity"
    android:background="@color/cinza_claro"
    >

    <FrameLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_neon"
        android:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@id/relative"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="150.px"
            android:layout_margin="16dp"
            android:background="@drawable/background_search_bar"
            android:textSize="14sp"
            app:iconifiedByDefault="false"
            app:queryHint="@string/pesquisar" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20.dp"
                android:text="@string/fiados_cadastrados"
                android:textColor="@color/cinza_grafite"
                android:textSize="22.sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/fiado_item" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/amarelo_solar"
            android:contentDescription="@string/add_produto"
            android:src="@drawable/outline_add_24"
            android:tint="@color/black"
            android:tooltipText="@string/adicionar_fiado"
            app:shapeAppearanceOverlay="@style/Fabs" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>