<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro"
    android:fitsSystemWindows="true"
    tools:context=".view.drawerNavigation.DrawerActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200.px"
        android:padding="30.px"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/azul_neon"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginEnd="30.px"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/voltar"
            android:scaleY="1.5"
            android:scaleX="1.5"
            />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconifiedByDefault="false"
            android:background="@drawable/background_search_bar"
            app:queryHint="@string/pesquisar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.dp"
            android:text="@string/adicionar_ao_carrinho"
            android:textColor="@color/cinza_grafite"
            android:textSize="22.sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/produto_item" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>